2011-08-11  Scott James Remnant  <keybuk@google.com>

	* init/main.c: Deal with failure to setup the system console by
	falling back to /dev/null, so we don't end up without default fds
	and castrate the process.

2011-08-10  Scott James Remnant  <keybuk@google.com>

	* init/job_class.c (job_class_new): nit, use #defines for the default
	nice level and oom score adjustment.

2011-07-25  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c: job_process_spawn():
	  - Added dup2() return check.
	* TESTING.sessions: Updated with information on user sessions.
	* init/job_process.c:
	  - job_process_spawn():
	    - Change group before user and do it as early as possible.
	    - Ensure non-priv user is able to read script fd. Default system
	      behaviour is seemingly not consistent/defined, so force it
	      to be (LP: #813052)
	    - Ensure cwd for user job is home directory by default.
	  - job_process_error_read():
	    - Added handling for JOB_PROCESS_ERROR_SETUID and
	      JOB_PROCESS_ERROR_SETGID (LP: #807293).
	    - Added new entry for JOB_PROCESS_ERROR_CHOWN.
	* init/job_process.h:
	  - Added entry for JOB_PROCESS_ERROR_CHOWN in JobProcessErrorType.
	* init/man/init.5: Update for user jobs explaining behaviour of stanzas
	  which manipulate system resource limits and when the init
	  daemon reads the users job directory.
	* util/tests/test_user_sessions.sh: New script for testing user sessions
	  (NOTE: this is *NOT* run automatically).
	* init/session.c: session_from_dbus(): Handle case where a users
	  home directory is changed or where a uid is re-used for a
	  different username.
	* init/session.h: Updated comments for Session object.
	* init/man/init.5: Explain that symbolic links are not supported.

2011-07-22  James Hunt  <james.hunt@ubuntu.com>

	* util/man/initctl.8: Clarify semantics of restart(8)
	  command (LP: #731225).

2011-07-20  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c: