@@ -1,5 +1,12 @@
 2011-08-11  Scott James Remnant  <keybuk@google.com>
 
+	* init/job_class.c, init/job_class.h: Move constants into the
+	header file so they can be found from other source files.
+	* init/job_process.c (job_process_spawn): Only adjust the OOM
+	score if it isn't the default
+	* init/main.c: Apply the default OOM score to the init process
+	itself.
+
 	* init/main.c: Deal with failure to setup the system console by
 	falling back to /dev/null, so we don't end up without default fds
 	and castrate the process.
